--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
 command.processor.classname=com.example.MyCommandProcessor
-site.token=
-model.name=TEST-WEATHER
+site.token=8b5eca43-4dbf-430e-b00a-728257179a03
+model.name=DEMO-WEATHER
 model.description=环境监测站
